--- a/src/composer.json
+++ b/src/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "xapp/Rpc",
+    "name": "xapp-rpc",
     "type": "xapp-module",
     "keywords": ["xapp", "rpc"],
     "homepage": "http://xapp-php.com",
