--- a/src/composer.json
+++ b/src/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "xapp-rpc",
+    "name": "xapp/Rpc",
     "type": "xapp-module",
     "keywords": ["xapp", "rpc"],
     "homepage": "http://xapp-php.com",
@@ -13,16 +13,13 @@
     },
     "require": {
         "php": ">=5.2.6",
-        "xapp-Core": "master"
+        "xapp/Core": "1.0.x-dev"
     },
-    "repositories": [
-        {
-            "url": "https://github.com/setcooki/xapp-core",
-            "type": "vcs",
-            "version":"master",
-            "packagist": false
-        }
-    ],
+    "repositories": [{
+        "packagist": false,
+        "type": "composer",
+        "url": "http://www.pearls-media.com/packages/packages.json"
+    }],
     "autoload": {
         "psr-0": {
             "Xapp_Rpc": "../.."
